--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "clsx": "^2.0.0",
     "next": "14.0.3",
     "react": "^18",
+    "react-color": "^2.19.3",
+    "react-color-palette": "^7.1.0",
     "react-dom": "^18",
     "vaul": "^0.7.9"
   },
