--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "clsx": "^2.0.0",
+    "@radix-ui/react-icons": "^1.3.0",
     "next": "14.0.3",
+    "next-themes": "^0.2.1",
     "react": "^18",
-    "react-color": "^2.19.3",
     "react-color-palette": "^7.1.0",
     "react-dom": "^18",
     "vaul": "^0.7.9"
