--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "export": "next export",
-    "buildExportNojekyll": "next build && touch out/.nojekyll",
+    "buildExp": "next build && touch out/.nojekyll",
     "deploy": "gh-pages -d out -t true"
   },
   "dependencies": {
