--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "export": "next export",
     "buildExp": "next build && touch out/.nojekyll",
     "deploy": "gh-pages -d out -t true",
-    "ds":"next build && touch out/.nojekyll && gh-pages -d out -t true"
+    "ds": "next build && touch out/.nojekyll && gh-pages -d out -t true"
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
@@ -30,6 +30,8 @@
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
     "postcss": "^8",
+    "prettier": "^3.1.0",
+    "prettier-plugin-tailwindcss": "^0.5.7",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
