--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ds": "next build && touch out/.nojekyll && gh-pages -d out -t true"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
     "@radix-ui/react-icons": "^1.3.0",
     "gh-pages": "^6.1.0",
     "next": "14.0.3",
