--- a/package.json
+++ b/package.json
@@ -14,14 +14,20 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.17",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-icons": "^1.3.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
     "gh-pages": "^6.1.0",
+    "lucide-react": "^0.294.0",
     "next": "14.0.3",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-color-palette": "^7.1.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18",
+    "tailwind-merge": "^2.0.0",
+    "tailwindcss-animate": "^1.0.7",
     "use-clippy": "^1.0.9",
     "vaul": "^0.7.9"
   },
